kubernetes/k3s-01/workloads/syncthing/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: syncthing
  namespace: syncthing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: syncthing
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      containers:
        - name: syncthing
          image: docker.io/syncthing/syncthing:2.1.6@sha256:4d0281bdcb4ed9baf503d251d0544ddd856f49fce3f114056257ae172b7fb670
          resources:
            requests:
              cpu: 200m
              memory: 384Mi
            limits:
              cpu: 500m
              memory: 1024Mi
          volumeMounts:
            - name: syncthing
              mountPath: /var/syncthing
            - name: syncthing-repos
              mountPath: /repos
      volumes:
        - name: syncthing
          persistentVolumeClaim:
            claimName: syncthing
        - name: syncthing-repos
          persistentVolumeClaim:
            claimName: syncthing-repos-encrypted
