kubernetes/k3s-01/workloads/syncthing/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing
  namespace: syncthing
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 8384
      targetPort: 8384
      protocol: TCP
    - name: bep-tcp
      port: 22000
      targetPort: 22000
      protocol: TCP
  selector:
    app: syncthing
