kubernetes/k3s-01/workloads/syncthing/ingress-route-bep-tcp.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: syncthing
  namespace: syncthing
spec:
  entryPoints:
    - bep-tcp
  routes:
    - match: HostSNI(`*`)
      middlewares:
        - namespace: syncthing
          name: syncthing-ipallowlist
      services:
        - name: syncthing
          port: 22000
