kubernetes/k3s-01/workloads/syncthing/network-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: syncthing
  namespace: torrenting
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      app: syncthing
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8384
        - protocol: TCP
          port: 22000
        - protocol: UDP
          port: 22000
